# rsbin

./: Cargo.toml  README.md  build.rs
example/: config.toml
src/: main.rs
src/rsbin/: command.rs  config.rs  config.rs.in  hash.rs  mod.rs  os.rs  routine.rs  util.rs
